These are the Release Notes leading-up to Revision 2.4.5 of netperf:

Things changed in this release:

*) Changes to enable compilation and building of netperf for
   VMware. Kudos to the person who did the first port, I will be happy
   to name that person when told it is OK :)

*) Fixes from Adam Bidema for launching netserver children when the
   path to netserver.exe is very long.  

*) For the first time, netperf2 has a dependency, albeit optional, on
   another non-base-os bit of code - libsmbios under Linux.  It will
   attept to detect this at compile time and use it to report the
   system model name in an omni test.  If libsmbios is there we will
   try to use it, otherwise we will not.  If the associated include
   file is also there (eg the -dev package in apt-get-speak), we will
   use it to get the prototype for SMBIOSGetSystemName, otherwise we
   make a guess as to the prototype for SMBIOSGetSystemName(), which
   is the only call we make to libsmbios.

*) Fixes for BSD CPU utilization to deal with different BSD variants
   using different types.  Courtesy of Simon Burge <simonb@NetBSD.org>

*) The "omni" suite has been added on an experimental basis.  If it
   works-out then many of the tests in src/nettest_bsd.c,
   src/nettest_sdp.c, and src/nettest_sctp.c will be "migrated" to use
   the "omni infrastructure" (aka two routines to measure them
   all...).  Apart from reduced socket code, the omni suite has
   user-configurable output in either "human readable" or CSV format.
   By default, a VERY large quantity of data is output when asking for
   csv format (test-specific -o option).  The omni suite is not yet
   documented (there are some as-yet undiagnosed problems with
   doc/netperf.texi in emacs texinfo mode and updating nodes and links
   and such - any help there would be appreciated) but there is a
   small text file in doc/ describing the names (most) of the
   available output's.  For the most up-to-date list consult