@@ -8,9 +8,13 @@
 #include <config.h>
 #endif
 
+#ifdef WIN32
+#error Unix Domain Sockets are not available under Windows
+#endif
+
 #ifdef WANT_UNIX
 char	nettest_unix_id[]="\
-@(#)nettest_unix.c (c) Copyright 1994-2007 Hewlett-Packard Co. Version 2.4.3";
+@(#)nettest_unix.c (c) Copyright 1994-2008 Hewlett-Packard Co. Version 2.4.5";
      
 /****************************************************************/
 /*								*/
